--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -102,7 +102,7 @@ title: Databasically
       %a.member{:href => "index.html#contact"}
         %img{:alt => "", :src => "http://lorempixel.com/350/250/people?2"}/
       %h4 Willis F. Jackson III
-      %h5 Partner, Sales & Marketing Director
+      %h5 Partner, Sales &amp; Marketing Director
       %p Recently took his hard knocks in two startups. Learned his lessons. Mentors early stage founders in lean startup and customer development methods.
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
@@ -111,7 +111,8 @@ title: Databasically
         %img{:alt => "", :src => "http://lorempixel.com/350/250/people?3"}/
       %h4 Chad Metcalf
       %h5 Developer, Chief Mustache Officer
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
+      %p Tests new boundaries of facial hair. Hardcore automated tester. Soccer enthusiast and thrower of discs.
+      %br
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
     .span3
@@ -119,23 +120,25 @@ title: Databasically
         %img{:alt => "", :src => "http://lorempixel.com/350/250/people?4"}/
       %h4 Matt Petty
       %h5 Developer
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
+      %p Whiz with a camera. Rolls many sided dice with abandon. Pushes pixels and code with ease.
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
-    / .span3
-    /   %a.member{:href => "index.html#contact"}
-    /     %img{:alt => "", :src => "http://lorempixel.com/350/250/people?5"}/
-    /   %h4 Piston Honda
-    /   %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
-    /   %p
-    /     %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
-    / .span3
-    /   %a.member{:href => "index.html#contact"}
-    /     %img{:alt => "", :src => "http://lorempixel.com/350/250/people?6"}/
-    /   %h4 Brian Cosgrove
-    /   %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
-    /   %p
-    /     %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
+    .span3
+      %a.member{:href => "index.html#contact"}
+        %img{:alt => "", :src => "http://lorempixel.com/350/250/people?5"}/
+      %h4 Nick Fausnight
+      %h5 Developer, Lead Intern
+      %p
+      %p
+        %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
+    .span3
+      %a.member{:href => "index.html#contact"}
+        %img{:alt => "", :src => "http://lorempixel.com/350/250/people?6"}/
+      %h4 Katelyn Neely
+      %h5 Admin, Cat Lady
+      %p Cracks whips. Can jump cars with a single bound.
+      %p
+        %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
 / PROCESS
 %section#process
   %h1 Make it easy.
@@ -167,4 +170,4 @@ title: Databasically
           .field.span8
             %input.m-btn.blue{:type => "submit", :value => "Submit"}/
 
-            
+
