adding process copy

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -138,7 +138,17 @@ title: Databasically
     /     %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
 / PROCESS
 %section#process
-  %h1 Make it easy.
+  %h1 No fancy graphics.
+  %h2 Just substance.
+  .span6
+    %h3 Discover
+    %p We work quickly to figure out your objectives and requirements so you get the business result you want without having to worry.
+    %h3 Design
+    %p We will take your requirements and translate them into a system architecture and a set of user stories and views. If you have a designer that you like to work with, we are ok with that too.
+    %h3 Develop
+    %p This is where our strength really starts to shine. We write code that is easy to maintain so you spend less money over the lifetime of your project.
+    %h3 Deploy
+    %p We put new code on the server early and often, that way you can play around with it and so we can work together to discover new requirements.
 / end PROCESS
 / CONTACT
 %section#contact
