Fix radio buttons on contact form.
Fixes #12

--- a/source/contact.html.haml
+++ b/source/contact.html.haml
@@ -1,3 +1,6 @@
+---
+layout: article
+---
 / Wufoo form
 #form
   %h3 Let's start a discussion
@@ -26,6 +29,9 @@
             %label.radio
               %input#Field6_1{:name => "Field6", :type => "radio", :value => "&lt; $20k", :tabindex => "5"}
               less than $20k
+            %br
+            %br
+
             %label.radio
               %input#Field6_2{:name => "Field6", :type => "radio", :value => "$20k - $100k", :tabindex => "6"}
               $20k - $100k
