--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -8,7 +8,7 @@
         %li
           %a{:href => "/articles"} Articles
         %li
-          %a{:href => "#"} Contact
+          %a{:href => "/contact"} Contact
       %h3.muted
         %a{:href => '/'} Databasically
 
