--- a/source/layouts/_head.haml
+++ b/source/layouts/_head.haml
@@ -9,29 +9,10 @@
     = stylesheet_link_tag "all"
     = javascript_include_tag "all"
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
-    %meta{:content => "Your site description", :name => "description"}/
+    %meta{:content => "Ruby enthusiasts, mostly based in Kansas City, KS, USA.", :name => "description"}/
     %meta{:content => "your name", :name => "author"}/
     %meta{:content => "keywords, go, here", :name => "keywords"}/
-    / FACEBOOK META
-    /
-      <meta property='og:locale' content='en_US'/>
-      <meta property="og:title" content="Your site title goes here" />
-      <meta property="og:description" content="Your Description goes here" />
-      <meta property="og:type" content="article"/>
-      <meta property="og:url" content="http://yoursite.com/">
-      <meta property="og:image" content="http://yoursite.com/images/logo.png" />
-      <meta property="fb:admins" content="111111111111"/>
-    / TWITTER META
-    /
-      <meta name="twitter:card" content="summary">
-      <meta name="twitter:site" content="@yourtwitteraccount">
-      <meta name='twitter:image' content='http://www.yoursite.com/images/logo.png'>
-      <meta name="twitter:description" content="Your Description">
-    / CONONICAL
-    / <link rel="canonical" href="http://www.yoursite.com/" />
-    / GOOGLE PLUS
-    / <link rel="publisher" href="https://plus.google.com/111111111111/about"/>
-    / styles
+
     %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:800,400,300", :rel => "stylesheet", :type => "text/css"}/
     / Le HTML5 shim, for IE6-8 support of HTML5 elements
     /[if lt IE 9]
