nearly complete copy, but a haml error

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -14,20 +14,25 @@ title: Databasically
   %h1 AND HELP BUSINESSES GROW
 / EXPERTISE
 %section#expert
-  %h1 Rely on our expertise.
+  %h1 What's in it for you.
   .row.do
     .span3
       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?1"}/
-      %h4 Bold Explorers
-      %p We like to push the boundaries of what is possible. We look at obstacles as opportunities.
+      %h4 Technical partners
+      %p You don't want to have to worry about the ability of your software developers, so we tell you when we are pushing the boundaries of our abilities. It doesn't happen that often.
     .span3
       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?2"}/
-      %h4 Story Tellers
-      %p Every project has a story. We dig deep into the characters and write amazing chapters of creative works.
+      %h4 User focus
+      %p Most developers will just build whatever you tell them to build. We make it a habit to tell you not to build things so we can figure out what will make the biggest difference for your business. Our customers love it.
     .span3
       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?3"}/
-      %h4 Game Changers
-      %p There's nothing like being the first to do something. To be different than the rest of the pack. We can help you do that.
+      %h4 Community leaders
+      %p
+        You can't afford to have your developers disappear on you. We don't just do this as a day job. We love it so much, we organize 
+        %a{:href => "rubymidwest.com"} Ruby Midwest
+        and 
+        %a{:href => "meetup.com/kcruby"} KC Ruby meetup
+        . When you work with us, you are accessing our wide network so your project always has the perfect person developing for you.
 / PORTFOLIO
 %section#work
   %h1 Our Work.
@@ -40,7 +45,7 @@ title: Databasically
       %li
         %a{"data-filter" => ".web", :href => "#"} Web Applications
       %li
-        %a{"data-filter" => ".ill", :href => "#"} Corporate Training
+        %a{"data-filter" => ".ill", :href => "#"} Training
       %li
         %a{"data-filter" => ".logo", :href => "#"} Startups
       %li
