--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -28,11 +28,12 @@ title: Databasically
       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?3"}/
       %h4 Community leaders
       %p
-        You can't afford to have your developers disappear on you. We don't just do this as a day job. We love it so much, we organize 
+        You can't afford to have your developers disappear on you. We don't just do this as a day job. We love it so much, we organize
         %a{:href => "rubymidwest.com"} Ruby Midwest
-        and 
-        %a{:href => "meetup.com/kcruby"} KC Ruby meetup
-        . When you work with us, you are accessing our wide network so your project always has the perfect person developing for you.
+        and
+        = succeed '.' do
+          %a{:href => "meetup.com/kcruby"} KC Ruby meetup
+        When you work with us, you are accessing our wide network so your project always has the perfect person developing for you.
 / PORTFOLIO
 %section#work
   %h1 Our Work.
@@ -133,7 +134,7 @@ title: Databasically
         %img{:alt => "", :src => "http://lorempixel.com/350/250/people?5"}/
       %h4 Nick Fausnight
       %h5 Developer, Lead Intern
-      %p 
+      %p
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
     .span3
