--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -28,12 +28,11 @@ title: Databasically
       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?3"}/
       %h4 Community leaders
       %p
-        You can't afford to have your developers disappear on you. We don't just do this as a day job. We love it so much, we organize
-        %a{:href => "rubymidwest.com"} Ruby Midwest
+        When you work with us, you are accessing our wide network so your project always has the perfect person developing for you. That's because we don't just do this as a day job. We love it so much, we organize
+        %a{:href => "http://rubymidwest.com"} Ruby Midwest
         and
         = succeed '.' do
-          %a{:href => "meetup.com/kcruby"} KC Ruby meetup
-        When you work with us, you are accessing our wide network so your project always has the perfect person developing for you.
+          %a{:href => "http://meetup.com/kcruby"} KC Ruby meetup.
 / PORTFOLIO
 %section#work
   %h1 Our Work.
