preliminarily ready for deployment, some meta tags still need fixin later

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -133,7 +133,7 @@ title: Databasically
         %img{:alt => "", :src => "http://lorempixel.com/350/250/people?5"}/
       %h4 Nick Fausnight
       %h5 Developer, Lead Intern
-      %p
+      %p As a member of the Blue Valley CAPS educational program, we expected him to be good. But we didn't expect him to be THIS good.
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
     .span3
@@ -166,24 +166,5 @@ title: Databasically
   .row
     / MAP
     #map.container.hidden-phone
-  #form
-    %h3 Contact Form
-    %form#contact-form{:action => "sendmail.php", :method => "post"}
-      %fieldset
-        .row
-          .holder.span8
-            .message
-              .top
-              .contents
-                #alert
-              .bottom
-          .field.span8
-            %input#name.input-text.m-wrap.m-ctrl-large{:name => "name", :placeholder => "Your Name", :type => "text", :value => ""}/
-          .field.span8
-            %input#email.input-text.m-wrap.m-ctrl-large{:name => "email", :placeholder => "Your Email Address", :type => "text", :value => ""}/
-          .field.span8
-            %textarea#message.input-textarea.m-wrap.m-ctrl-large{:name => "message", :placeholder => "Your Message"}
-          .field.span8
-            %input.m-btn.blue{:type => "submit", :value => "Submit"}/
-
-
+    %div{:style => "text-align: center;"}
+      %a.btn.btn-large{:href => "/contact", :style => "font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; font-size: 300%; padding: 20px; background-color: #E01B00; background-image: none; color: #ffffff;"} Let's talk about you
