--- a/source/layouts/_head.haml
+++ b/source/layouts/_head.haml
@@ -10,8 +10,8 @@
     = javascript_include_tag "all"
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     %meta{:content => "Ruby enthusiasts, mostly based in Kansas City, KS, USA.", :name => "description"}/
-    %meta{:content => "your name", :name => "author"}/
-    %meta{:content => "keywords, go, here", :name => "keywords"}/
+    / %meta{:content => "your name", :name => "author"}/
+    / %meta{:content => "keywords, go, here", :name => "keywords"}/
 
     %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:800,400,300", :rel => "stylesheet", :type => "text/css"}/
     / Le HTML5 shim, for IE6-8 support of HTML5 elements
