added blog link to navbar

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -18,6 +18,9 @@
             %a{:href => "#process"} Process
           %li
             %a{:href => "#contact"} Contact
+          %br/
+          %li
+            %a{:href => "/articles"} Blog
       .span9
         = yield
 
