--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -23,7 +23,7 @@ title: Databasically
     .span3
       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?2"}/
       %h4 User focus
-      %p Most developers will just build whatever you tell them to build. We make it a habit to tell you not to build things so we can figure out what will make the biggest difference for your business. Our customers love it.
+      %p Most developers will just build whatever you tell them to build. We make it a habit to tell you want not to build so we can figure out what will make the biggest difference for your business. Our customers love it.
     .span3
       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?3"}/
       %h4 Community leaders
@@ -32,7 +32,7 @@ title: Databasically
         %a{:href => "http://rubymidwest.com"} Ruby Midwest
         and
         = succeed '.' do
-          %a{:href => "http://meetup.com/kcruby"} KC Ruby meetup.
+          %a{:href => "http://meetup.com/kcruby"} KC Ruby meetup
 / PORTFOLIO
 %section#work
   %h1 Our Work.
@@ -165,6 +165,6 @@ title: Databasically
   / CONTACT
   .row
     / MAP
-    #map.container.hidden-phone
+    / #map.container.hidden-phone
     %div{:style => "text-align: center;"}
       %a.btn.btn-large{:href => "/contact", :style => "font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; font-size: 300%; padding: 20px; background-color: #E01B00; background-image: none; color: #ffffff;"} Let's talk about you
