--- a/source/stylesheets/docs.css
+++ b/source/stylesheets/docs.css
@@ -52,9 +52,10 @@ body > .navbar .brand:hover {
 -------------------------------------------------- */
 
 /* padding for in-page bookmarks and fixed navbar */
+/* default template margin-top overridden to make floating navbar selector align more accurately with onscreen content */
 section {
   margin-bottom: 300px;
-  margin-top:6px;
+  margin-top:100px;
 }
 /*home section override*/
 section#masthead{
